# ntrusign

./: .gitignore  CMakeLists.txt  initial.sh
NTRUSignKeyChain/: CMakeLists.txt
NTRUSignKeyChain/src/: Buffer.h  NTRUKeyChain.cpp  NTRUKeyChain.h  PrivateKey.cpp  PrivateKey.h  PublicKey.cpp  PublicKey.h  Signature.cpp  Signature.h  common.h  main.cpp
NTRUSignKeyChain/src/tpm/: BackEnd.cpp  BackEnd.h  BackEndFile.cpp  BackEndFile.h  KeyHandle.cpp  KeyHandle.h  KeyHandleMem.cpp  KeyHandleMem.h  Tpm.cpp  Tpm.h
NTRUSignKeyChain/src/utils/: NTRUSignUtil.cpp  NTRUSignUtil.h
src/: Makefile  bench.c  constants.h  test.cpp
